fix spacing of sections

--- a/src/App.css
+++ b/src/App.css
@@ -19,8 +19,7 @@ hr {
 }
 
 .section {
-    margin: 0.6rem 0;
-    padding: 0.6rem 1rem;
+    padding: 1.8rem 1rem;
     font-family: "Quicksand";
 }
 
